Refactor configuration into a PropertyResolver