@@ -4,8 +4,8 @@ configurations {
 
 
 dependencies {
-	compile("com.datastax.cassandra:cassandra-driver-core:2.0.4")
-	compile("org.springframework.data:spring-data-cassandra:1.0.4.RELEASE") {		
+	compile("com.datastax.cassandra:cassandra-driver-core:2.1.5")
+	compile("org.springframework.data:spring-data-cassandra:1.3.0.RELEASE") {
 		exclude group:'org.apache.cassandra',module:'cassandra-all'
 	}
 	compile("org.apache.commons:commons-lang3:3.3.2")
@@ -52,17 +52,28 @@ dependencies {
 
 
 	compile project(':grails-datastore-gorm'),
-		project(':grails-datastore-core'),
-		project(':grails-datastore-gorm-plugin-support')
+		    project(':grails-datastore-core')
 
-	testCompile project(':grails-datastore-gorm-test'),
-		project(':grails-datastore-gorm-tck'),
-		('cglib:cglib-nodep:2.2.2')
+    compile(project(":grails-datastore-gorm-support")) {
+        exclude group:'org.grails', module:'grails-datastore-gorm-hibernate-core'
+    }
 
+
+	testCompile  project(':grails-datastore-gorm-tck'), {
+        exclude group:'org.grails', module:'grails-datastore-gorm-support'
+    }
+
+    testCompile('cglib:cglib-nodep:2.2.2')
 
 	
 
 }
+
+//tasks.withType(GroovyCompile) {
+//    configure(groovyOptions.forkOptions) {
+//        jvmArgs = ['-XX:MaxPermSize=512m', '-Xms512m', '-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
+//    }
+//}
 
 sourceSets {
 	main {
